--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,8 @@
 body {
     background-color: rgb(200,200,200);
     color: rgb(0,0,0);
-    font-family: "Open Sans", sans-serif;
+    font-family: Eurostyle;
+	src: url("../Starfield/Eurostyle.ttf");
     text-align: center;
 }
 
