--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
     background-color: rgb(200,200,200);
     color: rgb(0,0,0);
     font-family: Eurostile;
-	src: url("../Starfield/Eurostile.ttf");
+	src: url("../../Starfield/Eurostile.ttf");
     text-align: center;
 }
 
