--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,7 @@
-
-@font-face{
-	font-family: "Eurostile";
-	src: url("../../Starfield/Eurostile.ttf");
-	
 body {
     background-color: rgb(200,200,200);
     color: rgb(0,0,0);
+    font-family: "Open Sans", sans-serif;
     text-align: center;
 }
 
@@ -20,8 +16,6 @@ header {
 }
 
 footer {
-	font-family: "Open Sans";
 	font-style: italic;
 	font-size: 90%;
 }
-
